added comparison for small and large files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>large files test</h1>
+  <div id="largeFileContent"></div>
+  <h1>small files test</h1>
+  <div id="smallFileContent"></div>
   <script src="script.js"></script>
 </body>
 </html>
